--- a/package.json
+++ b/package.json
@@ -19,9 +19,14 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
-    "react-native-safe-area-context": "^4.7.4",
+    "react-native-safe-area-context": "^4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "expo-image-picker": "~14.3.2",
+    "expo-camera": "~13.4.4",
+    "expo-print": "~12.4.2",
+    "expo-sharing": "~11.5.0",
+    "@react-native-async-storage/async-storage": "1.18.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
