--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "expo-camera": "~13.4.4",
     "expo-print": "~12.4.2",
     "expo-sharing": "~11.5.0",
-    "@react-native-async-storage/async-storage": "1.18.2"
+    "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-community/netinfo": "9.3.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
