--- a/package.json
+++ b/package.json
@@ -10,24 +10,26 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
+    "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-community/netinfo": "9.3.10",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "expo": "~49.0.15",
+    "expo-camera": "~13.4.4",
+    "expo-image-picker": "~14.3.2",
     "expo-linear-gradient": "~12.3.0",
+    "expo-print": "~12.4.2",
+    "expo-sharing": "~11.5.0",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.7.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-blob-util": "^0.19.6",
     "react-native-safe-area-context": "^4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-web": "~0.19.6",
-    "expo-image-picker": "~14.3.2",
-    "expo-camera": "~13.4.4",
-    "expo-print": "~12.4.2",
-    "expo-sharing": "~11.5.0",
-    "@react-native-async-storage/async-storage": "1.18.2",
-    "@react-native-community/netinfo": "9.3.10"
+    "react-native-textarea": "^1.0.4",
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
