--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-blob-util": "^0.19.6",
     "react-native-safe-area-context": "^4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-switch": "^1.5.1",
     "react-native-textarea": "^1.0.4",
     "react-native-web": "~0.19.6"
   },
