--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
-    "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-native-community/netinfo": "9.3.10",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "expo": "~49.0.15",
     "expo-camera": "~13.4.4",
+    "expo-document-picker": "~11.5.4",
+    "expo-file-system": "~15.4.5",
     "expo-image-picker": "~14.3.2",
     "expo-linear-gradient": "~12.3.0",
+    "expo-permissions": "~14.2.1",
     "expo-print": "~12.4.2",
     "expo-sharing": "~11.5.0",
     "expo-status-bar": "~1.6.0",
@@ -26,6 +29,7 @@
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
     "react-native-blob-util": "^0.19.6",
+    "react-native-html-to-pdf": "^0.12.0",
     "react-native-safe-area-context": "^4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-switch": "^1.5.1",
