--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native": "0.72.6",
     "react-native-blob-util": "^0.19.6",
     "react-native-html-to-pdf": "^0.12.0",
+    "react-native-image-picker": "^7.1.0",
     "react-native-safe-area-context": "^4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-switch": "^1.5.1",
