--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "firebase": "^10.7.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.6",
+    "react-native": "^0.72.10",
     "react-native-blob-util": "^0.19.6",
     "react-native-html-to-pdf": "^0.12.0",
     "react-native-image-picker": "^7.1.0",
