--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "work-place-app",
+  "name": "app-ehs-v3",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -9,32 +9,20 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/webpack-config": "^19.0.0",
-    "@react-native-async-storage/async-storage": "^1.21.0",
-    "@react-native-community/netinfo": "9.3.10",
-    "@react-navigation/native": "^6.1.9",
-    "@react-navigation/native-stack": "^6.9.17",
-    "expo": "~49.0.15",
-    "expo-camera": "~13.4.4",
-    "expo-document-picker": "~11.5.4",
-    "expo-file-system": "~15.4.5",
-    "expo-image-picker": "~14.3.2",
-    "expo-linear-gradient": "~12.3.0",
-    "expo-permissions": "~14.2.1",
-    "expo-print": "~12.4.2",
-    "expo-sharing": "~11.5.0",
-    "expo-status-bar": "~1.6.0",
-    "firebase": "^10.7.0",
+    "@expo/metro-runtime": "~3.2.3",
+    "@react-native-community/hooks": "^2.8.0",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.11.0",
+    "expo": "^51.0.30",
+    "expo-image-picker": "^15.0.7",
+    "expo-linear-gradient": "^13.0.2",
+    "expo-print": "^13.0.1",
+    "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "^0.72.10",
-    "react-native-blob-util": "^0.19.6",
-    "react-native-html-to-pdf": "^0.12.0",
-    "react-native-image-picker": "^7.1.0",
-    "react-native-safe-area-context": "^4.6.3",
-    "react-native-screens": "~3.22.0",
-    "react-native-switch": "^1.5.1",
-    "react-native-textarea": "^1.0.4",
+    "react-native": "0.74.5",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
